resolved horizontal scroll, relocated lightbox2 library css to 'libs' folder and formatted all project files

--- a/css/about-conference.css
+++ b/css/about-conference.css
@@ -31,32 +31,35 @@
 	text-align: left;
 	line-height: 1.6em;
 	font-weight: 700;
-  font-size: 3.5em;
+	font-size: 3.5em;
 }
+
 .conference__title .text-wrapper {
 	position: relative;
 	display: inline-block;
 	padding-top: 0.1em;
 	padding-right: 0.05em;
 	padding-bottom: 0.15em;
-  }
-  .conference__title  .line {
+}
+
+.conference__title .line {
 	opacity: 0;
-	position: absolute;
 	left: 0;
 	height: 100%;
 	width: 3px;
 	background-color: #fff;
 	transform-origin: 0 50%;
-  }
-  .conference__title .line1 { 
-	top: 0; 
+}
+
+.conference__title .line1 {
+	top: 0;
 	left: 0;
-  }
-  .conference__title  .letter {
+}
+
+.conference__title .letter {
 	display: inline-block;
 	line-height: 1em;
-  }
+}
 
 .divided__dots {
 	color: var(--light-accent-color);
